fixed profile alignment

--- a/app/assets/stylesheets/tutors.scss
+++ b/app/assets/stylesheets/tutors.scss
@@ -16,3 +16,19 @@
 h1 {
   text-align: center;
 }
+
+
+.reviews {
+    width: 50%;
+    margin: auto;
+    border-radius: 25px;
+    border: 2px solid #000;
+    padding: 20px;
+    width: 290px;
+    height: 345px;
+    box-shadow: 10px 10px 5px #888888;
+}
+
+.expertise {
+    text-align: center;
+}
